Fix Java 17 unpacker executor scope